--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -95,78 +95,111 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="EC5-vL-a6p">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="230"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="172.66666666666666"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZT-8E-gYs" userLabel="Fast Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="230"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZT-8E-gYs" userLabel="Rabbit Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="172.66666666666666"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="wmh-uN-mq5"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElN-Ha-b2b" userLabel="Slow Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="230"/>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElN-Ha-b2b" userLabel="Snail Button">
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="172.66666666666666"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="mJa-Vl-U6O"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ent-7d-YS4">
-                                        <rect key="frame" x="0.0" y="230" width="375" height="230"/>
+                                        <rect key="frame" x="0.0" y="172.66666666666669" width="375" height="172.33333333333331"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nq5-Vj-KTw" userLabel="Chipmunk Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="230"/>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nq5-Vj-KTw" userLabel="Chipmunk Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="172.33333333333334"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="Tsi-U2-840"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRi-HC-TEU" userLabel="Darth Vader Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="230"/>
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hRi-HC-TEU" userLabel="Darth Vader Button">
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="172.33333333333334"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="UnM-1h-nJl"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="nBq-G5-fIH">
-                                        <rect key="frame" x="0.0" y="460" width="375" height="230"/>
+                                        <rect key="frame" x="0.0" y="345" width="375" height="172.66666666666663"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L14-Bz-Ewc" userLabel="Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="230"/>
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L14-Bz-Ewc" userLabel="Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="187.66666666666666" height="172.66666666666666"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="hRl-9L-uxN"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2f-u5-iht" userLabel="Reverb Button">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="230"/>
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M2f-u5-iht" userLabel="Reverb Button">
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="187.33333333333337" height="172.66666666666666"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="JxM-HZ-cH3"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zZt-wL-Sr0">
+                                        <rect key="frame" x="0.0" y="517.66666666666663" width="375" height="172.33333333333337"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rgo-nY-eHc" userLabel="Stop Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="172.33333333333334"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="stop.circle.fill" catalog="system">
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="40"/>
+                                                    <color key="baseForegroundColor" red="0.2092356682" green="0.80149430040000003" blue="0.72881770130000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="stopButtonPressed:" destination="Arz-Jn-vXq" eventType="touchUpInside" id="XqV-tR-WQU"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rgo-nY-eHc" userLabel="Stop Button">
-                                <rect key="frame" x="146.66666666666666" y="786" width="81.666666666666657" height="6"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="stop.circle.fill" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="40"/>
-                                    <color key="baseForegroundColor" red="0.2092356682" green="0.80149430040000003" blue="0.72881770130000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </buttonConfiguration>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7jN-eR-lJz"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="7jN-eR-lJz" firstAttribute="trailing" secondItem="Tb1-FI-ovA" secondAttribute="trailing" id="0OO-Wo-6nU"/>
                             <constraint firstItem="Tb1-FI-ovA" firstAttribute="top" secondItem="7jN-eR-lJz" secondAttribute="top" id="22P-W7-kad"/>
-                            <constraint firstAttribute="bottom" secondItem="Rgo-nY-eHc" secondAttribute="bottom" constant="20" id="Bw2-lD-Hzc"/>
+                            <constraint firstItem="7jN-eR-lJz" firstAttribute="top" secondItem="Tb1-FI-ovA" secondAttribute="bottom" constant="-690" id="65b-Zt-ogq"/>
                             <constraint firstItem="7jN-eR-lJz" firstAttribute="bottom" secondItem="Tb1-FI-ovA" secondAttribute="bottom" id="L0b-g7-chy"/>
                             <constraint firstItem="Tb1-FI-ovA" firstAttribute="leading" secondItem="7jN-eR-lJz" secondAttribute="leading" id="Sbj-t9-cbv"/>
-                            <constraint firstItem="Rgo-nY-eHc" firstAttribute="top" secondItem="Tb1-FI-ovA" secondAttribute="bottom" constant="8" id="pqY-r0-2t9"/>
-                            <constraint firstItem="Rgo-nY-eHc" firstAttribute="centerX" secondItem="Kbw-y1-uCC" secondAttribute="centerX" id="wHp-LL-msL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KAE-cx-uHE"/>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="Nq5-Vj-KTw" id="LPu-wG-PFt"/>
+                        <outlet property="echoButton" destination="L14-Bz-Ewc" id="9NB-AK-ueI"/>
+                        <outlet property="rabbitButton" destination="nZT-8E-gYs" id="wtr-Jl-Mkh"/>
+                        <outlet property="reverbButton" destination="M2f-u5-iht" id="7Yu-my-vIu"/>
+                        <outlet property="snailButton" destination="ElN-Ha-b2b" id="HWP-51-bet"/>
+                        <outlet property="stopButton" destination="Rgo-nY-eHc" id="8at-gY-f0m"/>
+                        <outlet property="vaderButton" destination="hRi-HC-TEU" id="gBB-WF-a9H"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OgI-Zk-Yxi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1744.9275362318842" y="97.767857142857139"/>
+            <point key="canvasLocation" x="1744.8" y="97.536945812807886"/>
         </scene>
     </scenes>
     <resources>
